--- a/ecr/action.yaml
+++ b/ecr/action.yaml
@@ -11,6 +11,9 @@ inputs:
     description: The tag that builds the image with
     required: true
     default: latest
+  BUILD_TIMESTAMP:
+    description: The timestamp of the image creation
+    required: true
 
 runs:
   using: "composite"
@@ -25,6 +28,6 @@ runs:
         BUILD_TIMESTAMP: ${{ inputs.BUILD_TIMESTAMP }}
       run: |
         docker build --no-cache --build-arg REPOSITORY=$REPOSITORY -t $IMAGE_REPO_NAME:$IMAGE_TAG .
-        docker tag $IMAGE_REPO_NAME:$IMAGE_TAG $REPOSITORY/$IMAGE_REPO_NAME:$IMAGE_TAG
+        docker tag $IMAGE_REPO_NAME:$IMAGE_TAG $REPOSITORY/$IMAGE_REPO_NAME:$IMAGE_TAG-$BUILD_TIMESTAMP
         docker push $REPOSITORY/$IMAGE_REPO_NAME:$IMAGE_TAG
       shell: bash
