--- a/ecr/action.yaml
+++ b/ecr/action.yaml
@@ -29,5 +29,5 @@ runs:
       run: |
         docker build --no-cache --build-arg REPOSITORY=$REPOSITORY -t $IMAGE_REPO_NAME:$IMAGE_TAG .
         docker tag $IMAGE_REPO_NAME:$IMAGE_TAG $REPOSITORY/$IMAGE_REPO_NAME:$IMAGE_TAG-$BUILD_TIMESTAMP
-        docker push $REPOSITORY/$IMAGE_REPO_NAME:$IMAGE_TAG
+        docker push $REPOSITORY/$IMAGE_REPO_NAME:$IMAGE_TAG-$BUILD_TIMESTAMP
       shell: bash
