--- a/ecr/action.yaml
+++ b/ecr/action.yaml
@@ -18,6 +18,14 @@ inputs:
 runs:
   using: "composite"
   steps:
+  
+    - name: Login to Amazon ECR
+      id: login-ecr
+      uses: aws-actions/amazon-ecr-login@v1
+
+    - name: Get current timestamp
+      id: timestamp
+      run: echo "::set-output name=timestamp::$(date +%Y%m%d%S)"
     -
       name: Build ECR image - Push to Amazon ECR Registry
       env:
@@ -25,7 +33,7 @@ runs:
         IMAGE_REPO_NAME: ${{ inputs.IMAGE_REPO_NAME }}
         IMAGE_TAG: ${{ inputs.IMAGE_TAG }}
         COMMIT_HASH: ${{ inputs.COMMIT_HASH }}
-        BUILD_TIMESTAMP: ${{ inputs.BUILD_TIMESTAMP }}
+        BUILD_TIMESTAMP: ${{ steps.timestamp.outputs.timestamp }}}
       run: |
         docker build --no-cache --build-arg REPOSITORY=$REPOSITORY -t $IMAGE_REPO_NAME:$IMAGE_TAG .
         docker tag $IMAGE_REPO_NAME:$IMAGE_TAG $REPOSITORY/$IMAGE_REPO_NAME:$IMAGE_TAG-$BUILD_TIMESTAMP
